styles/global.css
/*==============================
TABLE OF CONTENTS 

|1| RESET
|2| VARIABLES
|3| UTILITIES
|4| BASIC ELEMENTS
|5| CARD COMPONENT
|6| MEDIA QUERIES
==============================*/

/*==============================
|1| RESET
==============================*/

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/*==============================
|2| VARIABLES
==============================*/

/* See styles/variables.css  */

/*==============================
|3| UTILITIES
==============================*/

/* See /styles/utilities.css */

/*==============================
|4| BASIC ELEMENTS
==============================*/

body {
  background: var(--clr-bg-primary);
  color: var(--clr-content);
  font-family: var(--ff-primary);
  text-align: center;
}

strong {
  color: var(--clr-strong);
}

main {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.attribution {
  display: none;
}

.wrapper {
  max-width: 327px;
  overflow: hidden;
  border-radius: var(--rad-md);
  display: flex;
  flex-direction: column;
}

/*==============================
|5| CARD COMPONENT
==============================*/

.card {
  background: var(--clr-bg-secondary);
  padding: 32px;
}

.image-wrapper {
  position: relative;
}

.card-hero {
  mix-blend-mode: multiply;
  opacity: 0.75;
}

.image-wrapper--overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  background: var(--clr-strong);
}

.card__content {
  margin-top: 8px;
}

.card__header {
  color: var(--clr-important);
  font-size: var(--fs-lg);
  font-weight: var(--fw-bold);
  line-height: 32px;
}

.card__body {
  margin-top: var(--g-xs);
  font-size: var(--fs-sm);
  line-height: 25px;
}

.card__stats {
  margin-top: 40px;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.card__stats__item__header {
  color: var(--clr-important);
  font-size: var(--fs-md);
  font-weight: var(--fw-bold);
}

.card__stats__item__body {
  color: var(--clr-tertiary);
  font-size: var(--fs-xs);
  font-family: var(--ff-secondary);
  text-transform: uppercase;
  letter-spacing: var(--ls-md);
}

/*==============================
|6| MEDIA QUERIES
==============================*/

@media (min-width: 1150px) {
  body {
    text-align: left;
  }

  .wrapper {
    grid-template-columns: 1fr auto;
    min-width: 1110px;
    max-height: 446px;
    grid-template-areas: "content img";
    flex-direction: row-reverse;
  }

  .image-wrapper {
    min-width: 540px;
  }

  .card {
    padding: 65px 95px 59px 71px;
  }

  .card__header {
    --fs-lg: 2.25rem;
    line-height: 44px;
  }

  .card__body {
    padding-right: 29px;
    margin-top: var(--g-sm);
  }

  .card__stats {
    gap: 60px;
    margin-top: 72px;
    flex-direction: row;
  }
}

